2005-07-05  Roland Illig  <roland.illig@gmx.de>

	* achown.c: Changed all references to umode_t into mode_t.
	* chmod.c: Likewise.
	* file.c: Likewise.
	* view.c (view_load): Don't try to use fcntl() with VFS file
	handles. That cannot work.
	* textconf.c: mc --version prints the size of commonly used data
	types.

2005-07-03  Roland Illig  <roland.illig@gmx.de>

	* textconf.c: mc --version prints the number of bits of off_t.

2005-07-01  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_fix_cursor_position): Fixed a division-by-zero
	bug, which had been reported by Dirk Jagdmann and Pavel Tsekov.
	Pavel also tracked down the bug.

2005-06-30  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_growbuf_load_until): Check the datasource in the
	right place. (get_byte_growing_buffer): Removed an unnecessary
	assertion. (view_file_load_data): Make sure the right datasource
	is selected. (view_set_byte): This function is only expected to
	be called when datasource == DS_FILE. Removed unused code.
	* global.h: Don't use MC_ENABLE_DEBUGGING_CODE to decide whether
	to enable or disable assertions. Just use the default value.

2005-06-28  Roland Illig  <roland.illig@gmx.de>

	* view.c: Simplified error handling when loading files.
	* view.c (normal_search): Replaced with normal_search_cmd().
	(do_regexp_search): Removed unnecessary type cast.
	(do_normal_search): Likewise.
	* view.c (display): Changed return type to void.
	* view.c (display): Splitted up into view_display_hex() and
	view_display_text().
	* ext.c (get_file_type_local): Redirect error messages from
	file(1) to /dev/null.

2005-06-27  Roland Illig  <roland.illig@gmx.de>

	* view.c: Massive speed-ups by reordering statements and declaring
	functions as inline.
	* view.c: Renamed view_quit to want_to_quit and changed its type
	to gboolean.
	* view.c: Eliminated the need for function pointer casts.

2005-06-22  Pavel Tsekov  <ptsekov@gmx.net>

	* main.h: Export edit_one_file.